adds json tree factory

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <script type="text/javascript" src="node_modules/angular/angular.js"></script>
     <script type="text/javascript" src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="build/angular/app.js"></script>
+    <script type="text/javascript" src="build/angular/factories/decisionTrees.js"></script>
     <script type="text/javascript" src="build/angular/diagnosis/diagnosis.controller.js"></script>
     <script type="text/javascript" src="build/angular/diagnosis/diagnosis.state.js"></script>
     <script type="text/javascript" src="build/angular/header/header.controller.js"></script>
