changed sidebar styles

--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
       </span>
     </nav>
     <div class="main-window">
-      <ui-view></ui-view>
+      <ui-view>
+        <div>
+
+          <h1 style="font-size: 300px;margin-left: 249px;text-align: center;display: inline;">☤</h1>
+        </div>
+      </ui-view>
     </div>
   </div>
 
